# neurolab-conda

./: .gitignore  demo.py  init_setup.sh  pproject.toml  requirements_dev.txt  setup.cfg  setup.py  template.py
.github/workflows/: python-publish.yml
research/: manual_test.ipynb
src/neurolab_conda/: logger.py  youtube.py
tests/: __init__.py
tests/unit/: test_yt.py
