[meta-data]
license=MIT
license_path=LICENSE
classifiers=
    Progarmming Language :: Python :: 3.7
    Progarmming Language :: Python :: 3.8
    Progarmming Language :: Python :: 3.9

[options]
install_requires=
    ensure==1.0.2
    py-youtube==1.1.7
python_requires=>=3.6
[options.extras_require]
testing=
    pytest>=7.1.3
    mypy>=0.971
    flake8>=5.0.4
    tox>=3.25.1
    black>=22.88.0

[options.package_data]
neurolab-conda=py.typed
[flake8]
max-line-lenght=160
exculde=__init__.py